--- a/public/css/mycss.css
+++ b/public/css/mycss.css
@@ -1,8 +1,8 @@
 @charset "utf-8";
-
+////For home
 body
 {
-	font-family: Garamond, Helvetica, sans-serif;
+	font-family:  Calibri, Helvetica, sans-serif;
 	font-size: 18px;	
 }
 .nav
@@ -21,13 +21,11 @@ h2{
 
 .home_brownpaper_bg
 {
-	background-image : url(home_brownpaper_bg.png);
-	background-repeat : no-repeat;
-	  font-family : Baskerville Old Face;
-  	  font-size : 39px;
-	  text-align:center;
-	  max-height:360px;
-	  padding: 100px 0 ;
+	background-image : url(img/home_brownpaper_bg.jpg);
+  	 display: grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+	  grid-gap:1em;
+	  padding: 50px 50px ;
 	  margin: 0.5em 0;
 }
 .home_icon
@@ -35,7 +33,12 @@ h2{
 	background-image : url(home_icon.png);
 	background-repeat : no-repeat;
 }
+body{
+	//height: 1525 px
+	//width: 1346 px;
+	//background: purple;
 	
+}	
 
 ul {
     list-style-type: none;
@@ -72,23 +75,8 @@ li a {
 	padding: 2em;
 }
 
-.wrapper
-{
 
-	
-	display: grid;
-	grid-template-columns: 50% 50%;
-}
-.wrapper > div{
-	padding: 2em;
-	text-align: center;
-}
-.matrix
-{
-	background : #42E3BC;
-	background : rgba(66, 227, 188, 1);
-	
-}
+
 .home_footer{
     padding: 2em;
     background: #333;
@@ -107,58 +95,122 @@ li a {
 }
 
 
-.card {
-   		 box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  	 	 transition: 0.3s;
-    		 width: 100%;
-    		 height:auto;
-    		 border-radius: 8px;
-		 background: white;
-		}
+/////For explore
 
-	.card:hover {
-    		box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-		}
+ .card {
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        transition: 0.3s;
+         width: 100%;
+         height:100% ;
+         border-radius: 8px;
+        background: white;
+   
+     
+    }
 
-	.grid-profile >i mg {
-  	  	border-radius: 8px 8px 0 0;
-		
-		}
+                    .card:hover {
+                            box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+                        }
 
-	.card_body {
-   	 padding: 2px 16px;
-	}
-	
-	.grid-container{
- 		 display: grid;
-  		grid-template-columns: 1fr 4fr;
-		border: 2px solid black;
-		grid-gap: 15px;
-		padding: 0 1em;
-	}
-	
-	.grid-profile{
-		
-		padding: 2em;
-   		 box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-		background : #AAE8C5;
-		font-size: 25px ;
-		
-		
-	}
-	.grid-body{
-		
-   		box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-		display: grid;
-  		grid-template-rows: 1fr 6fr 1fr 6fr;
-		background : #ECEBE4;
-		padding: 0 1em;
-		
-		
-	}
-	.bookself {
-		 display: grid;
-  		grid-template-columns: 1fr 5fr 5fr 5fr 1fr;
-		grid-gap:15px;
-		text-align: center;
-	}
+                    .grid-profile >img {
+                        border-radius: 8px 8px 0 0;
+                        
+                        }
+
+                    .card_body {
+                    padding: 2px 2px;
+                    }
+                    
+                    .grid-container{
+                        display: grid;
+                        grid-template-columns: 1fr 4fr;
+                        
+                        grid-gap: 15px;
+                        padding: 1em 1em;
+                    }
+                    
+                    .grid-profile{
+                        
+                        padding: 1.5em;
+                        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+                        background : #AAE8C5;
+                        font-size: 25px ;
+                      
+                        
+                        
+                    }
+                    .grid-body{
+                        
+                        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+                        display: grid;
+                        grid-template-rows: 1fr 0.2fr ;
+                        background : #ECEBE4;
+                        padding: 1em 1em;
+                       
+                        
+                    }
+                    
+                    .bookself-body{
+                        display: grid;
+                        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+                        grid-gap:1.5em;
+                        
+                        
+                    }
+ .rate-area:not(:checked) > input {
+
+position: absolute;
+top: -9999px;
+clip: rect(0,0,0,0);
+
+}
+
+
+
+.rate-area:not(:checked) > label {
+
+float: right;
+
+overflow: hidden;
+white-space: nowrap;
+cursor: pointer;
+font-size: 100%;
+color: lightgrey;
+text-shadow: 1px 1px #bbb;
+
+}
+
+
+
+.rate-area:not(:checked) > label:before { content: ''; }
+
+
+
+.rate-area > input:checked ~ label {
+
+color: gold;
+text-shadow: 1px 1px #c60;
+font-size: 150% !important;
+
+}
+
+
+
+.rate-area:not(:checked) > label:hover, .rate-area:not(:checked) > label:hover ~ label { color: gold; }
+
+
+
+.rate-area > input:checked + label:hover, .rate-area > input:checked + label:hover ~ label, .rate-area > input:checked ~ label:hover, .rate-area > input:checked ~ label:hover ~ label, .rate-area > label:hover ~ input:checked ~ label {
+
+color: gold;
+text-shadow: 1px 1px goldenrod;
+
+}
+                 
+
+
+
+
+
+
+ 
